Assignments/Assignment 2/Assignment Soultion/.metadata/.plugins/org.eclipse.cdt.ui/Prob08.build.log
05:33:10 **** Rebuild of configuration Debug for project Prob08 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o Prob08.o "..\\Prob08.c" 
..\Prob08.c: In function 'prime':
..\Prob08.c:22:6: error: 'i' undeclared (first use in this function)
  for(i=x;)
      ^
..\Prob08.c:22:6: note: each undeclared identifier is reported only once for each function it appears in
..\Prob08.c:22:10: error: expected expression before ')' token
  for(i=x;)
          ^
..\Prob08.c:23:1: error: expected expression before '}' token
 }
 ^
..\Prob08.c:23:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^

05:33:10 Build Failed. 3 errors, 1 warnings. (took 98ms)

